--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: mcw1415 # change to your GitHub username
 
 twitter:
-  username: # change to your Twitter username
+  username: no # change to your Twitter username
 
 social:
   # Change to your full name.
