--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ title: MOONC # the main title
 
 tagline: 공부 목적 블로그.. # it will display as the subtitle
 
-description: MOONC의 공부 목적 블로그 # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+description: >- # used by seo meta and the atom feed
+  MOONC의 공부 목적 블로그..
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -27,9 +27,6 @@ url: "https://mcw1415.github.io"
 
 github:
   username: mcw1415 # change to your GitHub username
-
-twitter:
-  username: no # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -88,7 +85,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark # [light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
