--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: aplTQZbhKgronG9xyhv1GkBL2241s8BbUfzRc55SiZI
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
