--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: MOON # the main title
+title: MOONC # the main title
 
-tagline: 공부 목적 블로그..  #it will display as the subtitle
+tagline: 문씨의 공부 목적 블로그..  #it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  MOONC의 공부 목적 블로그..
+  피드백 환영합니다..!
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
