--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: MOONC # the main title
 tagline: 공부 기록용 블로그  #it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  피드백 환영합니다!
+  피드백 환영합니다!:)
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
