--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted # Self-hosted 런너 사용
     strategy:
       matrix:
         ruby: ["3.1", "3.2", "3.3"]
@@ -33,13 +32,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # for posts's lastmod
+          fetch-depth: 0
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
+      - name: Setup Ruby Manually
+        run: |
+          RUBY_VERSION=${{ matrix.ruby }}
+          INSTALL_DIR="/opt/hostedtoolcache/Ruby/${RUBY_VERSION}/x64"
+          if [ ! -f "${INSTALL_DIR}.complete" ]; then
+            mkdir -p $INSTALL_DIR
+            ruby-build $RUBY_VERSION $INSTALL_DIR
+            touch "${INSTALL_DIR}.complete"
+          fi
+          echo "Ruby $RUBY_VERSION installed at $INSTALL_DIR"
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -51,3 +55,4 @@ jobs:
 
       - name: Test Site
         run: bash tools/test.sh
+
