--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: MVBCHIwhLiSIgy5vG3hVhutZ6vJvUMzsAAyIslNQecI
+  google: # MVBCHIwhLiSIgy5vG3hVhutZ6vJvUMzsAAyIslNQecI
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
